i9500: audio: audio_effects.conf: fix audience library name

--- a/audio/audio_effects.conf
+++ b/audio/audio_effects.conf
@@ -142,7 +142,7 @@ effects {
 #        ...
 #    }
 
-pre_processing {
+audience_pre_processing {
     voice_communication {
         aec {}
         ns {}
