--- a/rootdir/etc/lpm.rc
+++ b/rootdir/etc/lpm.rc
@@ -5,31 +5,45 @@ on init
 
 sysclktz 0
 
+# Permissions for CPU Governor	
+    chown system system /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor
+    chmod 0664 /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor
+    chown system system /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq
+    chmod 0664 /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq
+    chown system system /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq
+    chmod 0664 /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq
+
+# Permissions for GPU DVFS
+	chown radio system /sys/devices/platform/pvrsrvkm.0/sgx_dvfs_min_lock
+	chown radio system /sys/devices/platform/pvrsrvkm.0/sgx_dvfs_max_lock
+	chown radio system /sys/devices/platform/pvrsrvkm.0/sgx_dvfs_table
+	chmod 0660 /sys/devices/platform/pvrsrvkm.0/sgx_dvfs_min_lock
+	chmod 0660 /sys/devices/platform/pvrsrvkm.0/sgx_dvfs_max_lock
+	chmod 0660 /sys/devices/platform/pvrsrvkm.0/sgx_dvfs_table
+
+# Permissions for Exynos 5 BUS
+	chown radio system /sys/class/devfreq/exynos5-busfreq-mif/min_freq
+	chown radio system /sys/class/devfreq/exynos5-busfreq-mif/max_freq
+	chown radio system /sys/class/devfreq/exynos5-busfreq-mif/freq_table
+	chmod 0660 /sys/class/devfreq/exynos5-busfreq-mif/min_freq
+	chmod 0660 /sys/class/devfreq/exynos5-busfreq-mif/max_freq
+	chmod 0660 /sys/class/devfreq/exynos5-busfreq-mif/freq_table
+
 # Set cpu governor to powersave while in charging mode
 	write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor powersave
 	write /sys/devices/system/cpu/cpu1/cpufreq/scaling_governor powersave
 	write /sys/devices/system/cpu/cpu2/cpufreq/scaling_governor powersave
 	write /sys/devices/system/cpu/cpu3/cpufreq/scaling_governor powersave
 	
-# Set lowest cpu freq
+# Set lowest frequencies
 	write /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq 250000
-	write /sys/devices/system/cpu/cpu1/cpufreq/scaling_min_freq 250000
-	write /sys/devices/system/cpu/cpu2/cpufreq/scaling_min_freq 250000
-	write /sys/devices/system/cpu/cpu3/cpufreq/scaling_min_freq 250000
 	write /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq 250000
-	write /sys/devices/system/cpu/cpu1/cpufreq/scaling_max_freq 250000
-	write /sys/devices/system/cpu/cpu2/cpufreq/scaling_max_freq 250000
-	write /sys/devices/system/cpu/cpu3/cpufreq/scaling_max_freq 250000
 	write /sys/devices/system/cpu/cpufreq/iks-cpufreq/max_freq 250000
 	write /sys/devices/system/cpu/cpufreq/iks-cpufreq/min_freq 250000
 
-# Disable extra CPUs
-	write /sys/devices/system/cpu/cpu1/online 0
-	write /sys/devices/system/cpu/cpu2/online 0
-	write /sys/devices/system/cpu/cpu3/online 0
-	chmod 444 /sys/devices/system/cpu/cpu1/online
-	chmod 444 /sys/devices/system/cpu/cpu2/online
-	chmod 444 /sys/devices/system/cpu/cpu3/online
+	write /sys/devices/platform/pvrsrvkm.0/sgx_dvfs_max_lock 177
+
+	write /sys/class/devfreq/exynos5-busfreq-mif/max_freq 100000
 
 # EHCI runtime enable for LPA
 	write /sys/devices/platform/s5p-ehci/power/control auto
@@ -37,17 +51,17 @@ sysclktz 0
 # Required by KNOX bootloader
 on charger
 	class_start core
-	setprop sys.usb.config mass_storage
+	setprop sys.usb.config none
 
 # Required by KNOX-free bootloader
 on boot
 	class_start core
-	setprop sys.usb.config mass_storage
+	setprop sys.usb.config none
 
 # Reduce and Lock Screen Brightness while charging
 	chown system system /sys/class/backlight/panel/brightness
 	write /sys/class/backlight/panel/brightness 10
-	chmod 444 /sys/class/backlight/panel/brightness
+	chmod 0444 /sys/class/backlight/panel/brightness
 
 ###
 # Daemon processes to be run by init.
