i9500: updates from I9500XXUHOA7

--- a/nfc/libnfc-brcm.conf
+++ b/nfc/libnfc-brcm.conf
@@ -114,7 +114,7 @@ NFA_DM_DISC_DURATION_POLL=500
 ###############################################################################
 # Configure the single default SE to use.  The default is to use the first
 # SE that is detected by the stack.  This value might be used when the phone
-# supports multiple SE (e.g. 0xF3 and 0xF4) but you want to force it to use
+# support multiple SE (e.g. 0xF3 and 0xF4) but you want to force it to use
 # one of them (e.g. 0xF4).
 ACTIVE_SE=0xF4
 
@@ -285,10 +285,6 @@ DEFAULT_ISODEP_ROUTE=0xF3
 DEFAULT_OFFHOST_ROUTE=0xF4
 
 POWER_SAVER_WORKAROUND_1=0xF3
-
-PRESENCE_CHECK_ALGORITHM=1
-AID_MATCHING_MODE=2
-AUTO_ADJUST_ISO_BITRATE=1
 
 ###############################################################################
 # NCI Hal Module name
