Disable KSM and increase readahead to 1024

--- a/rootdir/etc/init.universal5410.rc
+++ b/rootdir/etc/init.universal5410.rc
@@ -6,9 +6,9 @@ on early-init
 	
 	write /sys/block/mmcblk0/queue/scheduler noop
 
-# Increase max readahead size to 512 KB
-	write /sys/block/mmcblk0/queue/read_ahead_kb 512
-	write /sys/block/mmcblk1/queue/read_ahead_kb 512
+# Increase max readahead size to 1024 KB
+	write /sys/block/mmcblk0/queue/read_ahead_kb 1024
+	write /sys/block/mmcblk1/queue/read_ahead_kb 1024
 
 # Flash storage isn't a good entropy source, and only causes
 # locking overhead in the kernel. Turn it off.
@@ -496,11 +496,11 @@ on post-fs-data
 	setprop vold.post_fs_data_done 1
 
 on boot
-# Set up KSM
-	write /sys/kernel/mm/ksm/deferred_timer 1
-	write /sys/kernel/mm/ksm/pages_to_scan 100
-	write /sys/kernel/mm/ksm/sleep_millisecs 500
-	write /sys/kernel/mm/ksm/run 1
+# Disable KSM
+	write /sys/kernel/mm/ksm/deferred_timer 0
+	write /sys/kernel/mm/ksm/pages_to_scan 0
+	write /sys/kernel/mm/ksm/sleep_millisecs 0
+	write /sys/kernel/mm/ksm/run 0
 
 # Enable pulsing led on boot
 	write /sys/class/sec/led/led_pattern 6
